Archive2/8f/d26614b891ab05/output
main.cpp: In function 'int main(int, char**)':
main.cpp:14:30: error: aggregate 'Server<NonDerived, void> x' has incomplete type and cannot be defined
     Server<NonDerived, void> x;
                              ^
